Change code to reflect more java 11 coding style.