@@ -18,9 +18,9 @@
 
 package org.apache.roller.weblogger.util;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -66,12 +66,8 @@ public final class URLUtilities {
      * URL encode a string using UTF-8.
      */
     public static String encode(String str) {
-        String encodedStr = str;
-        try {
-            encodedStr = URLEncoder.encode(str, "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            // ignored
-        }
+        String encodedStr;
+        encodedStr = URLEncoder.encode(str, StandardCharsets.UTF_8);
         return encodedStr;
     }
     
@@ -80,12 +76,8 @@ public final class URLUtilities {
      * URL decode a string using UTF-8.
      */
     public static String decode(String str) {
-        String decodedStr = str;
-        try {
-            decodedStr = URLDecoder.decode(str, "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            // ignored
-        }
+        String decodedStr;
+        decodedStr = URLDecoder.decode(str, StandardCharsets.UTF_8);
         return decodedStr;
     }
     
